infrastructure/cdk.out/FititNetworkStack.template.json
{
 "Description": "FitIt Network Infrastructure - VPC, subnets, security groups",
 "Resources": {
  "FititVpcFE0F8966": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Environment",
      "Value": "production"
     },
     {
      "Key": "ManagedBy",
      "Value": "CDK"
     },
     {
      "Key": "Name",
      "Value": "fitit-vpc"
     },
     {
      "Key": "Project",
      "Value": "FitIt"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "FititNetworkStack/FititVpc/Resource"
   }
  },
  "FititVpcPublicSubnet1Subnet9DBBA252": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-2a",
    "CidrBlock": "10.0.0.0/24",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Environment",
      "Value": "production"
     },
     {
      "Key": "ManagedBy",
      "Value": "CDK"
     },
     {
      "Key": "Name",
      "Value": "FititNetworkStack/FititVpc/PublicSubnet1"
     },
     {
      "Key": "Project",
      "Value": "FitIt"
     }
    ],
    "VpcId": {
     "Ref": "FititVpcFE0F8966"
    }
   },
   "Metadata": {
    "aws:cdk:path": "FititNetworkStack/FititVpc/PublicSubnet1/Subnet"
   }
  },
  "FititVpcPublicSubnet1RouteTableE35D1BDA": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Environment",
      "Value": "production"
     },
     {
      "Key": "ManagedBy",
      "Value": "CDK"
     },
     {
      "Key": "Name",
      "Value": "FititNetworkStack/FititVpc/PublicSubnet1"
     },
     {
      "Key": "Project",
      "Value": "FitIt"
     }
    ],
    "VpcId": {
     "Ref": "FititVpcFE0F8966"
    }
   },
   "Metadata": {
    "aws:cdk:path": "FititNetworkStack/FititVpc/PublicSubnet1/RouteTable"
   }
  },
  "FititVpcPublicSubnet1RouteTableAssociationF283181E": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "FititVpcPublicSubnet1RouteTableE35D1BDA"
    },
    "SubnetId": {
     "Ref": "FititVpcPublicSubnet1Subnet9DBBA252"
    }
   },
   "Metadata": {
    "aws:cdk:path": "FititNetworkStack/FititVpc/PublicSubnet1/RouteTableAssociation"
   }
  },
  "FititVpcPublicSubnet1DefaultRoute0EBA5170": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "FititVpcIGW974D5DEA"
    },
    "RouteTableId": {
     "Ref": "FititVpcPublicSubnet1RouteTableE35D1BDA"
    }
   },
   "DependsOn": [
    "FititVpcVPCGW68268E7B"
   ],
   "Metadata": {
    "aws:cdk:path": "FititNetworkStack/FititVpc/PublicSubnet1/DefaultRoute"
   }
  },
  "FititVpcPublicSubnet2Subnet378C92C9": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-2b",
    "CidrBlock": "10.0.1.0/24",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Environment",
      "Value": "production"
     },
     {
      "Key": "ManagedBy",
      "Value": "CDK"
     },
     {
      "Key": "Name",
      "Value": "FititNetworkStack/FititVpc/PublicSubnet2"
     },
     {
      "Key": "Project",
      "Value": "FitIt"
     }
    ],
    "VpcId": {
     "Ref": "FititVpcFE0F8966"
    }
   },
   "Metadata": {
    "aws:cdk:path": "FititNetworkStack/FititVpc/PublicSubnet2/Subnet"
   }
  },
  "FititVpcPublicSubnet2RouteTableC92BB8CC": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Environment",
      "Value": "production"
     },
     {
      "Key": "ManagedBy",
      "Value": "CDK"
     },
     {
      "Key": "Name",
      "Value": "FititNetworkStack/FititVpc/PublicSubnet2"
     },
     {
      "Key": "Project",
      "Value": "FitIt"
     }
    ],
    "VpcId": {
     "Ref": "FititVpcFE0F8966"
    }
   },
   "Metadata": {
    "aws:cdk:path": "FititNetworkStack/FititVpc/PublicSubnet2/RouteTable"
   }
  },
  "FititVpcPublicSubnet2RouteTableAssociation2646F931": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "FititVpcPublicSubnet2RouteTableC92BB8CC"
    },
    "SubnetId": {
     "Ref": "FititVpcPublicSubnet2Subnet378C92C9"
    }
   },
   "Metadata": {
    "aws:cdk:path": "FititNetworkStack/FititVpc/PublicSubnet2/RouteTableAssociation"
   }
  },
  "FititVpcPublicSubnet2DefaultRoute6327F618": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "FititVpcIGW974D5DEA"
    },
    "RouteTableId": {
     "Ref": "FititVpcPublicSubnet2RouteTableC92BB8CC"
    }
   },
   "DependsOn": [
    "FititVpcVPCGW68268E7B"
   ],
   "Metadata": {
    "aws:cdk:path": "FititNetworkStack/FititVpc/PublicSubnet2/DefaultRoute"
   }
  },
  "FititVpcIGW974D5DEA": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Environment",
      "Value": "production"
     },
     {
      "Key": "ManagedBy",
      "Value": "CDK"
     },
     {
      "Key": "Name",
      "Value": "fitit-vpc"
     },
     {
      "Key": "Project",
      "Value": "FitIt"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "FititNetworkStack/FititVpc/IGW"
   }
  },
  "FititVpcVPCGW68268E7B": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "InternetGatewayId": {
     "Ref": "FititVpcIGW974D5DEA"
    },
    "VpcId": {
     "Ref": "FititVpcFE0F8966"
    }
   },
   "Metadata": {
    "aws:cdk:path": "FititNetworkStack/FititVpc/VPCGW"
   }
  },
  "CDKMetadata": {
   "Type": "AWS::CDK::Metadata",
   "Properties": {
    "Analytics": "v2:deflate64:H4sIAAAAAAAA/0WPTQ+CMAyGf4v3MXEm3gkH40kChqvpSo3jYyOskxjCfzcokdP7vE/aNFVSHU8y3sHoI6yaqDVaTgUDNgJGfydUcip7FOnDllkqsqBbg0XQlnhxG+UuMN1At7T5zSXeOzTAxtn/8AIXyzRY4jMwjfBez6wtYQZ8dmR5Fjl5Fwb8Ll0D94FnYV1Fsvb7l4rlYXmi9sZEQ7BsOpL5Lz95MXb04QAAAA=="
   },
   "Metadata": {
    "aws:cdk:path": "FititNetworkStack/CDKMetadata/Default"
   }
  }
 },
 "Outputs": {
  "VpcId": {
   "Description": "VPC ID",
   "Value": {
    "Ref": "FititVpcFE0F8966"
   },
   "Export": {
    "Name": "FititVpcId"
   }
  },
  "VpcCidr": {
   "Description": "VPC CIDR Block",
   "Value": {
    "Fn::GetAtt": [
     "FititVpcFE0F8966",
     "CidrBlock"
    ]
   }
  },
  "ExportsOutputRefFititVpcPublicSubnet1Subnet9DBBA252EA1342EF": {
   "Value": {
    "Ref": "FititVpcPublicSubnet1Subnet9DBBA252"
   },
   "Export": {
    "Name": "FititNetworkStack:ExportsOutputRefFititVpcPublicSubnet1Subnet9DBBA252EA1342EF"
   }
  },
  "ExportsOutputRefFititVpcPublicSubnet2Subnet378C92C9D4FD8999": {
   "Value": {
    "Ref": "FititVpcPublicSubnet2Subnet378C92C9"
   },
   "Export": {
    "Name": "FititNetworkStack:ExportsOutputRefFititVpcPublicSubnet2Subnet378C92C9D4FD8999"
   }
  },
  "ExportsOutputRefFititVpcFE0F8966EC124A29": {
   "Value": {
    "Ref": "FititVpcFE0F8966"
   },
   "Export": {
    "Name": "FititNetworkStack:ExportsOutputRefFititVpcFE0F8966EC124A29"
   }
  }
 },
 "Parameters": {
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
